--- a/.github/workflows/build-immortalwrt.yml
+++ b/.github/workflows/build-immortalwrt.yml
@@ -42,6 +42,9 @@ env:
 jobs:
   build:
     runs-on: ubuntu-22.04
+    outputs:
+      device_name: ${{ steps.compile.outputs.device_name }}
+      file_date: ${{ steps.compile.outputs.file_date }}
 
     steps:
       - name: Check Server Performance
@@ -187,8 +190,14 @@ jobs:
           make -j$(nproc) || make -j1 || make -j1 V=s
           echo "status=success" >> $GITHUB_OUTPUT
           grep '^CONFIG_TARGET.*DEVICE.*=y' .config | sed -r 's/.*DEVICE_(.*)=y/\1/' > DEVICE_NAME
-          [ -s DEVICE_NAME ] && echo "DEVICE_NAME=_$(cat DEVICE_NAME)" >> $GITHUB_ENV
-          echo "FILE_DATE=_$(date +"%Y%m%d%H%M")" >> $GITHUB_ENV
+          [ -s DEVICE_NAME ] && {
+            device_name="_$(cat DEVICE_NAME)"
+            echo "DEVICE_NAME=${device_name}" >> $GITHUB_ENV
+            echo "DEVICE_NAME=${device_name}" >> $GITHUB_OUTPUT
+          }
+          file_date="_$(date +"%Y%m%d%H%M")"
+          echo "FILE_DATE=${file_date}" >> $GITHUB_ENV
+          echo "file_date=${file_date}" >> $GITHUB_OUTPUT
 
       - name: Check space usage
         if: (!cancelled())
@@ -300,9 +309,14 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: build
+    env:
+      DEVICE_NAME: ${{ needs.build.outputs.device_name }}
+      FILE_DATE: ${{ needs.build.outputs.file_date }}
+
     permissions:
       pages: write
       id-token: write
+
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
