--- a/.github/workflows/build-immortalwrt.yml
+++ b/.github/workflows/build-immortalwrt.yml
@@ -147,8 +147,9 @@ jobs:
       - name: Load custom configuration
         run: |
           [ -e files ] && {
-            mv files immortalwrt/files
-            echo "已移动 files 至 immortalwrt/files。"
+            cp -r files immortalwrt/
+            rm -r files
+            echo "已移动 files 至 immortalwrt/。"
             ls -al immortalwrt/files
           }
           [ -e $CONFIG_FILE ] && mv $CONFIG_FILE immortalwrt/.config
